--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,2 +1,21 @@
 <html>
+    <head>
+        <title>
+        Article one I Riyaz Rahman
+</title>
+    </head>
+    <body>
+        <div>
+            <a href="/">Home</a>
+        </div>
+        <hr>
+        <h3>
+            Article One
+        </h3>
+        <div>
+        <p>
+            This is the content for my first Article.
+        </p>
+        </div>
+    </body>
 </html>
