--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -13,6 +13,9 @@
             Article One
         </h3>
         <div>
+            August 16,2017
+        </div>
+        <div>
         <p>
             This is the content for my first Article.
         </p>
