--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -7,7 +7,7 @@
 
     <style>
     .container{
-        maximum-width:800px;
+        max-width:800px;
         margin: 0 auto;
         color:grey;
         font-family: sans-serif;
