--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -4,8 +4,22 @@
         Article two I Riyaz Rahman
 </title>
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-    </head>
-    <body>
+
+<style>
+.container{
+    max-width: 800px;
+    margin: 0 auto;
+    color: #404040;
+    font-family: sans-serif;
+    padding-top: 60px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+</style>
+</head>
+<body>
+     <div class="container">
+    
         <div>
             <a href="/">Home</a>
         </div>
@@ -22,5 +36,7 @@
         </p>
    
         </div>
+    </div>
     </body>
+    
 </html>
