--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>
-        Article Third I Riyaz Rahman
+        Article Third | Riyaz Rahman
 </title>
 <meta name="viewport" content="width=device-width,initial-scale=1" />
     <style>
