[imad-console] Updates ui/article-two.html

--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>
-        Article two I Riyaz Rahman
+        Article two | Riyaz Rahman
 </title>
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 
