--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>
-        Article one I Riyaz Rahman
+        Article one | Riyaz Rahman
 </title>
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 
