[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -4,14 +4,24 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div class="center">
-            <img src="/ui/madi.png" class="img-medium"/>
-        </div>
-        <br>
-        <div class="center text-big bold">
-            Hi! I am Riyaz, and this is my first webaap.
-            <h4>A new Heading.</h4>
-            I've made some new local changes.
+        <div class="container">
+         <div class="center">
+          <img src="https://pbs.twimg.com/profile_images/858988646061531136/YFA71Mmk_400x400.jpg" class="img-medium"/>
+         </div>
+         <hr/>
+         <h3>Personal</h3>
+         <div>
+             Hi,My name is Riyaz!
+         </div>
+         <hr/>
+         <h3>Professional</h3>
+         <div>
+             I Work For My self!
+         </div>
+             <hr/>
+             <div class="footer">
+                 
+                </div>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
